--- a/index.html
+++ b/index.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Module 2 Assignment</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+<h1>Desktop Requirements</h1>
 
+	<div class="row">
+		<div class="col-lg-4 col-md-6">
+			<section>
+				<h2 id="monitor">Monitor</h2>
+					<p>I am needed to complete a workspace.</p>
+			</section>
+		</div>
+		<div class="col-lg-4 col-md-6">
+			<section>
+				<h2 id="mouse">Mouse</h2>
+					<p>I am needed to complete a workspace.</p>
+			</section>
+		</div>
+		<div class="col-lg-4 col-md-12">
+			<section>
+				<h2 id="key">Keyboard</h2>
+					<p>I am needed to complete a workspace.</p>
+			</section>
+		</div>
+	</div>
 </body>
 </html>
