final final submission

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 		<div class="col-lg-4 col-md-6">
 			<section>
 				<h2 id="monitor">Monitor</h2>
-					<p>I am needed to complete a workspace.</p>
+					<p>I am needed to complete a work environment.</p>
 			</section>
 		</div>
 		<div class="col-lg-4 col-md-6">
 			<section>
 				<h2 id="mouse">Mouse</h2>
-					<p>I am needed to complete a workspace.</p>
+					<p>I am needed to complete a work environment. Long paragraph Long paragraph Long paragraph Long paragraph Long paragraph Long paragraph Long paragraph Long paragraph Long paragraph Long paragraph Long paragraph Long paragraph Long paragraph Long paragraph Long paragraph Long paragraph Long Long paragraph Long paragraph.</p>
 			</section>
 		</div>
 		<div class="col-lg-4 col-md-12">
 			<section>
 				<h2 id="key">Keyboard</h2>
-					<p>I am needed to complete a workspace.</p>
+					<p>I am needed to complete a work environment. dummy dummydummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy dummy text.</p>
 			</section>
 		</div>
 	</div>
